--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -155,6 +155,7 @@
   .topic-author__category {
     font-size: inherit;
     line-height: inherit;
+    align-content: baseline;
 
     .badge-category__wrapper,
     .badge-category,
